[package]
name = "waybound"
version = "0.1.0"
edition = "2021"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
memmap2 = "0.9"
tempfile = "3.0"
toml = "0.8"
